# junk-filter-mcp

./: .gitignore  README.md  config.yaml  config_loader.py  db.py  hermes-mcp-config.yaml  pyproject.toml  server.py
agents/: content_evaluator.py
