[project]
name = "junk-filter-mcp"
version = "0.1.0"
description = "MCP server for intelligent RSS content filtering — LLM-powered article evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "feedparser>=6.0",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.0",
]

[project.optional-dependencies]
server = ["anyio>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
